[package]
name = "yoga-sys"
version = "0.2.3"
authors = ["Nemikolh"]
build = "build.rs"
license = "BSD-3-Clause"
description = "Raw rust bindings for yoga (facebook flex layout cross-platform engine)"
documentation = "https://docs.rs/crate/yoga-sys/"
homepage = "https://github.com/Nemikolh/yoga-rs"
repository = "https://github.com/Nemikolh/yoga-rs"
readme = "README.md"
keywords = ["ffi", "yoga", "flex", "layout"]
categories = ["external-ffi-bindings", "rendering::engine"]

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"
skeptic = "0.13"

[dev-dependencies]
skeptic = "0.13"
